			   XPCE ChangeLog
			   ==============

* FIXED: Added -fno-strict-aliasing to make XPCE compile correctly using
  GCC-3 (Lourens van der Meij).

* FIXED: `image_browser<-selected' from library(pce_image_browser).

* ADDED: Allow unbound value as default in default/3.

* ADDED: `path<-distance' to compute distance to a point or event.

* ADDED: `menu->insert_before' for easily adding menu items in the middle
  of existing menus.

* FIXED: `object <-get_hyper' got into a loop when accessing the hyper
  backwards.

* ADDED/MODIFIED: Instance variables that allow for @default, but not for
  @nil have initial value @default without explicit specification.
  Instance-variables that have an associated class-variable are now always
  initialised to @class_default, which is replaced by the value from the
  class-variable on first access.

* MODIFIED: class tab/tab_stack: nicer visualisation of top/hidden tab.

* ADDED: `colour<-hilite' and `colour<-reduce': argument to say how much.

* FIXED: `frame->set' on Windows to handle X and Y properly.  Reported by
  Ron Seljee.

* MODIFIED: `tab_stack->layout_dialog' to succeed if the stack is empty.

* ADDED: Allow non-editing interaction (select, scroll) on text_items that
  handle editable: @off.  By Amir ?

* FIXED: Various overflow issues concerning path and distance calculations
  when using graphicals extending the range of 16-bit (short) integers.

* FIXED: `text_item ->value_font' fails to update font in some rare
  situations.

* MODIFIED: object-term of window and it subclasses now provide one
  argument: the <-name of the window.  Used to be inconsistent and
  often refering to failing methods, making object/2 fail on window
  instances.  Shouldn't break any code.

* ADDED: `class<-no_created' and `class<-no_freed': extra boolean
  argument to add the counts of their subclasses.  Used by PceEmacs
  Prolog colouring to display the correct number of fragments again.
